markup/components/program/program.scss
.program {
  background: url(%=static=%assets/program/sketch-2.jpg) no-repeat, url(%=static=%assets/program/sketch-3.jpg) no-repeat, $white;
  background-position: 100% 50px, 0 300px;
  position: relative;
  max-width: 100%;
  min-width: 320px;
  z-index: 10;
}

.program-wrapper {
  max-width: 1190px;
  min-width: 320px;
  margin: 0 auto;
  padding: 130px 0;
  position: relative;
}

.program-title {
  color: $purple;
  font-size: 3rem;
  font-weight: 500;
  margin: 0 20px 140px;
  padding: 0;
  text-align: center;
}

.program-title:after {
  background-color: $red;
  content: '';
  display: block;
  height: 5px;
  width: 70px;
  position: absolute;
  top: 225px;
  left: 46%;
}

.program-content-wrapper {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: flex-start;
  flex-wrap: nowrap;
}

.program-item {

  box-shadow: 0px 0px 11.44px 1.56px rgba(122, 122, 122, 0.84);
  box-sizing: border-box;
  max-width: 370px;
  min-width: 280px;
  margin: 0 10px 20px;
  width: 100%;
  border-radius: 5px;
}

.program-item__wrapper {
  padding: 40px 30px;
}

.entry-level {
  background: url(%=static=%assets/program/plan-1-bg.jpg) no-repeat;
}

.basic-level {
  background: url(%=static=%assets/program/plan-2-bg.jpg) no-repeat;
}

.professional-level {
  background: url(%=static=%assets/program/plan-3-bg.jpg) no-repeat;
}

.program-item__title {
  color: $white;
  font-size: 1.875rem;
  font-weight: 300;
  margin-bottom: 40px;
  text-align: center;
}

.program-item__price {
  color: $white;
  font-size: 3rem;
  font-weight: 500;
  margin-bottom: 55px;
  text-align: center;
}

.program-item__offer {
  margin-bottom: 95px;
}

.program-item__offer-list {
  color: $white;
  font-size: 1.315rem;
  list-style: none;
  font-weight: 300;
  text-align: center;
  margin: 0;
  padding: 0;
}

.offer-list__item {
  margin-bottom: 10px;
}

.program-item__get {
  text-align: center;
}

.btn-white {
  background: transparent;
  border: 3px solid $white;
  border-radius: 3px;
  color: $white;
  text-transform: uppercase;
  font-weight: 300;
  padding: 12px 25px;
  font-size: 1.125rem;
  line-height: 1.12rem;
  font-weight: 300;

  -webkit-transition: all .35s ease;
  -moz-transition: all .35s ease;
  -o-transition: all .35s ease;
  transition: all .35s ease;

  &:hover {
    background: $white;
    color: $purple;
  }
}

@media all and (max-width: 1080px){
  .program-title {
    font-size: 2.5rem;
  }
}

@media all and (max-width: 980px) {
  .program-wrapper {
    padding: 70px 0;
  }

  .program-title:after {
    top: 170px;
  }

  .program-content-wrapper {
    width: 95%;
    margin: 0 20px;
  }

  .program-item {
    margin: 0 10px 20px;
  }

  .offer-list__item {
    font-size: 1.15rem;
  }
}

@media all and (max-width: 920px) {

  .program-content-wrapper {
    flex-wrap: wrap;
  }

  .program-item {
    width: 40%;
  }

  .program-item__price, .program-item__title {
    margin-bottom: 50px;
  }
}

@media all and (max-width: 720px) {
  .program-wrapper {
    padding: 30px 0;
  }

  .program-title {
    font-size: 1.5rem;
    margin-bottom: 70px;
  }

  .program-title:after {
    top: 80px;
  }

  .program-item__title{
    font-size: 1.5rem;
  }

  .program-item__price, .program-item__title{
    margin-bottom: 30px;
  }

  .program-item__price{
    font-size: 2rem;
  }

  .rub{
    height: 25px;
  }

  .offer-list__item{
    margin-bottom: 10px;
  }

  .program-item {
    width: 50%;
  }

  .program-item__wrapper {
    padding: 40px 30px;
  }
}

